--- a/SAM.yaml
+++ b/SAM.yaml
@@ -23,6 +23,28 @@ GetTasksFunction:
           Auth:
             Authorizer: MyLambdaTokenAuthorizer
     Resources: 
+        # CreateTask Lambda Function
+      CreateTaskFunction:
+        Type: AWS::Serverless::Function
+        Properties:
+          CodeUri: src/handlers/createTask
+          Handler: app.handler
+          Policies:
+            - DynamoDBCrudPolicy:
+                TableName: !Ref TasksTable
+          Environment:
+             Variables:
+                TASKS_TABLE: !Ref TasksTable
+          Events:
+            PostTaskFunctionApi:
+             Type: Api
+             Properties:
+               RestApiId: !Ref TasksApi
+               Path: /tasks
+               Method: POST
+               Auth:
+                 Authorizer: MyLambdaTokenAuthorizer
+
       TasksTable:
           Type: AWS::DynamoDB::Table
           Properties:
